Ignore errors if SDK is already linked

--- a/examples/browser/Makefile
+++ b/examples/browser/Makefile
@@ -1,8 +1,8 @@
 browser: SDK main.go ui.go tab.go
 	go build
 
-SDK: ../../SDK
-	ln -s ../../SDK .
+SDK:
+	-ln -s ../../SDK .
 
 clean:
 	-rm -rf browser SDK
